--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </address>
                      <!--   <iframe title="location map" width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=32.99071%2C-117.27492%2C32.99306%2C-117.27022&amp;layer=mapnik&amp;marker=-117.272%2C32.99271" style="border: 1px solid #777"></iframe>
                 -->
-                <iframe title="location map" width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-117.27440714836122%2C32.99091947756095%2C-117.27104902267456%2C32.99349312114543&amp;layer=mapnik&amp;marker=32.99221015781092%2C-117.27272760355845" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=32.99221&amp;mlon=-117.27273#map=18/32.99221/-117.27273&amp;layers=N">View Larger Map</a></small>
+                <iframe title="location map" width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-117.27440714836122%2C32.99091947756095%2C-117.27104902267456%2C32.99349312114543&amp;layer=mapnik&amp;marker=32.99221015781092%2C-117.27272760355845" style="border: 1px solid #777"></iframe>
             </div>
         </div>
         </section>
