--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Short text, about 100-160 characters, summarizing this site.">
-    <meta property="og:title" content="Private Psychology Clinic Template" />
+    <meta name="description" content="Dr. Amy Horne's personal website.">
+    <meta property="og:title" content="Dr. Amy Horne" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://majakochanowska.github.io/psych-template/" />
+    <meta property="og:url" content="https://www.dramyhorne.com" />
     <meta property="og:image" content="https://majakochanowska.github.io/psych-template/images/og-image.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
@@ -199,8 +199,8 @@
             <div class="column">
                 <address class="text-center">
                     <p>Dr. Amy Horne</p>
-                    <p>807 Stonybrook Dr. Brooklyn, NY 11229</p>
-                    <p><i class="fas fa-mobile-alt"></i>(858) 350 -8788</p>
+                    <p>125 N. Acacia Ave., Suite 113, Solana Beach, CA 92075</p>
+                    <p><i class="fas fa-mobile-alt"></i> (858) 350-8788</p>
                     <!-- <p><i class="fas fa-at"></i> <a href="mailto: &#105;&#110;&#102;&#111;&#064;&#101;&#120;&#097;&#109;&#112;&#108;&#101;&#046;&#099;&#111;&#109;">&#105;&#110;&#102;&#111;&#064;&#101;&#120;&#097;&#109;&#112;&#108;&#101;&#046;&#099;&#111;&#109;</a></p>
                 --> 
                     <p><i class="fas fa-at"></i> <a href="mailto:dramyhorne@gmail.com">dramyhorne@gmail.com</a></p>
