--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script>
+    <!-- <link rel="shortcut icon" type="image/png" href="favicon.png"> -->
     <link rel="shortcut icon" type="image/png" href="favicon.png">
 
     <title>Private Psychology Clinic Template</title>
@@ -33,7 +34,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav menu">
             <li class="nav-item menu-item">
-                <a class="nav-link" href="about-us.html">About us</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown menu-item">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Services</a>
@@ -45,16 +46,6 @@
                     <a class="dropdown-item" href="services/sport-psychology.html">Sport Psychology</a>
                     <a class="dropdown-item" href="services/psychiatry.html">Psychiatry</a>
                 </div>
-            </li>
-            <li class="nav-item menu-item">
-                <a class="nav-link" href="fees.html">Fees</a>
-            </li>
-            <li class="nav-item menu-item">
-                <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
-            <li class="nav-item menu-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
         </ul> 
         </div>
     </nav>
