--- a/index.html
+++ b/index.html
@@ -37,14 +37,11 @@
                 <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown menu-item">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Services</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn">
-                    <a class="dropdown-item" href="services/consultation.html">Consultation</a>
-                    <a class="dropdown-item" href="services/adult-psychotherapy.html">Adult Psychotherapy</a>
-                    <a class="dropdown-item" href="services/child-psychotherapy.html">Child Psychotherapy</a>
-                    <a class="dropdown-item" href="services/couple-therapy.html">Couple Therapy</a>
-                    <a class="dropdown-item" href="services/sport-psychology.html">Sport Psychology</a>
-                    <a class="dropdown-item" href="services/psychiatry.html">Psychiatry</a>
+                    <a class="dropdown-item" href=" "<!-- link to pdf in quotes--> >Form 1</a>
+                    <a class="dropdown-item" href=" " <!-- link to pdf --> >Form 2</a>
+                    <a class="dropdown-item" href=" " <!-- link to pdf --> >Form 3</a>
                 </div>
         </ul> 
         </div>
@@ -129,56 +126,7 @@
             </div>
         </div>
 
-       
-        <section>
-        <div class="row">
-            <div class="col">
-                <h2 class="section-title">Services</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="column">
-                <div class="card-columns card-margin">
-                <div class="card bg-info text-white">
-                    <div class="card-body services"><a href="services/consultation.html" class="services-link">
-                        <h3 class="card-title"><i class="fas fa-comments"></i> Consultation</h3>
-                        <p class="card-text">Short text about consultation and when you can need it. At lectus urna duis convallis convallis. Ac placerat vestibulum lectus mauris ultrices eros in cursus. Auctor augue mauris augue neque.</p></a>
-                    </div>
-                </div>
-                <div class="card bg-info text-white">
-                    <div class="card-body services"><a href="services/adult-psychotherapy.html" class="services-link">
-                        <h3 class="card-title"><i class="fas fa-male"></i> Adult Psychotherapy</h3>
-                        <p class="card-text">Short text about adult psychotherapy and what disorders we can treat. Pharetra pharetra massa massa ultricies.</p></a>
-                    </div>
-                </div>
-                <div class="card bg-info text-white">
-                    <div class="card-body services"><a href="services/child-psychotherapy.html" class="services-link">
-                        <h3 class="card-title"><i class="fas fa-child"></i> Child Psychotherapy</h3>
-                        <p class="card-text">Short text about child psychotherapy and what disorders we can treat. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Neque vitae tempus quam pellentesque. </p></a>
-                    </div>
-                </div>
-                <div class="card bg-info text-white">
-                    <div class="card-body services"><a href="services/couple-therapy.html" class="services-link">
-                        <h3 class="card-title"><i class="fas fa-user-friends"></i> Couple Therapy</h3>
-                        <p class="card-text">Short text about couple therapy and when you can need it. A diam maecenas sed enim ut sem. Arcu odio ut sem nulla pharetra diam sit amet.</p></a>
-                    </div>
-                </div>
-                <div class="card bg-info text-white">
-                    <div class="card-body services"><a href="services/sport-psychology.html" class="services-link">
-                        <h3 class="card-title"><i class="fas fa-running"></i> Sport Psychology</h3>
-                        <p class="card-text">Short text about sport psychology and who can need it. Ac ut consequat semper viverra nam libero justo laoreet.</p></a>
-                    </div>
-                </div>
-                <div class="card bg-info text-white">
-                    <div class="card-body services"><a href="services/psychiatry.html" class="services-link">
-                        <h3 class="card-title"><i class="fas fa-clinic-medical"></i> Psychiatry</h3>
-                        <p class="card-text">Short text about psychiatry and what disorders we can treat. Habitant morbi tristique senectus et netus et malesuada. Phasellus faucibus scelerisque eleifend donec pretium vulputate.</p></a>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </div>
-        </section>
+      
 
         <section>
         <div class="row">
