--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <div class="row">
   <div class="column">
-    <img src="building.png" alt="building" style="width:100%"><img src="psych.png" alt="psych" style="width:100%"><img src="office.png" alt="office" style="width:100%">
+    <img-left src="building.png" alt="building" style="width:100%"><img-center src="psych.png" alt="psych" style="width:100%"><img-right src="office.png" alt="office" style="width:100%">
   </div>
 </div>
 
