--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@
     </nav>
 
 
+
+
+  <div class="container">
+    <img src="building.png" height="200" width="200" />
+    <p>This is image 1</p>
+  </div>
+  <div class="container">
+    <img class="middle-img" src="psych.png"/ height="200" width="200" />
+    <p>This is image 2</p>
+  </div>
+  <div class="container">
+    <img src="office.png" height="200" width="200" />
+    <p>This is image 3</p>
+  </div>
+
 <div class="row">
   <div class="column">
     <img-left src="building.png" alt="building" style="width:100%"><img-center src="psych.png" alt="psych" style="width:100%"><img-right src="office.png" alt="office" style="width:100%">
