--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
 
   <div class="container">
-    <img src="building.png" height="200" width="200" />
+    <img src="building.png" height="200" width="200" align="left"/>
 
-    <img class="middle-img" src="psych.png"/ height="200" width="200" />
+    <img class="middle-img" src="psych.png"/ height="200" width="200" align="middle"/>
 
-    <img src="office.png" height="200" width="200" />
+    <img src="office.png" height="200" width="200" align="right"/>
 
   </div>
 
