--- a/index.html
+++ b/index.html
@@ -53,20 +53,13 @@
 
 
   <div class="container">
-    <img src="building.png" height="200" width="200" align="left"/>
+    <img src="building.png" height="400" width="400"/>
 
-    <img class="middle-img" src="psych.png"/ height="200" width="200" align="middle"/>
+    <img class="middle-img" src="psych.png"/ height="400" width="400"/>
 
-    <img src="office.png" height="200" width="200" align="right"/>
+    <img src="office.png" height="400" width="400"/>
 
   </div>
-
-<div class="row">
-  <div class="column">
-    <img-left src="building.png" alt="building" style="width:100%"><img-center src="psych.png" alt="psych" style="width:100%"><img-right src="office.png" alt="office" style="width:100%">
-  </div>
-</div>
-
 
 
 
