--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
 
 
 
+
+<div class="row">
+  <div class="column">
+    <img src="building.png" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="psych.png" alt="Forest" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="office.png" alt="Mountains" style="width:100%">
+  </div>
+</div>
+
+
+
     <main class="container-fluid">
         <div class="row">
             <div class="column">
