--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li class="nav-item menu-item">
                 <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item dropdown menu-item" align="right">
+            <li class="nav-item dropdown menu-item">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn">
                     <a class="dropdown-item" href=" "<!-- link to pdf in quotes--> >Form 1</a>
