--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <header>
-    <nav class="navbar navbar-expand-sm bg-light">
+    <nav class="navbar navbar-expand-xl bg-light">
         <a class="navbar-brand" href="#"><img src="images/group.png" alt="logo" class="logo"></a>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
