--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav menu">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item menu-item">
                 <a class="nav-link" href="index.html">Home</a>
             </li>
