--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             </li>
             <li class="nav-item dropdown menu-item">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
-                <div class="dropdown-menu animate slideIn">
-                    <a class="dropdown-item" href=" "Form 1</a>
-                    <a class="dropdown-item" href=" "Form 2</a>
-                    <a class="dropdown-item" href=" "Form 3</a>
+                <div class="dropdown-menu dropdown-menu-right animate slideIn">
+                    <a class="dropdown-item" href="#"Form 1</a>
+                    <a class="dropdown-item" href="#"Form 2</a>
+                    <a class="dropdown-item" href="#"Form 3</a>
                 </div>
         </ul> 
         </div>
