--- a/index.html
+++ b/index.html
@@ -50,36 +50,40 @@
          </nav>
       </header> --> 
        
-<nav class="mb-1 navbar navbar-expand-lg navbar-dark info-color">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
-    aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">
-          <i class="fab fa-facebook-f"></i> Facebook
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <i class="fab fa-instagram"></i> Instagram</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-user"></i> Profile </a>
-        <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-          <a class="dropdown-item" href="#">My account</a>
-          <a class="dropdown-item" href="#">Log out</a>
+    <header>
+    <nav class="navbar navbar-expand-sm bg-light">
+        <a class="navbar-brand" href="#"><img src="images/group.png" alt="logo" class="logo"></a>
+        <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav menu">
+            <li class="nav-item menu-item">
+                <a class="nav-link" href="about-us.html">About us</a>
+            </li>
+            <li class="nav-item dropdown menu-item">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Services</a>
+                <div class="dropdown-menu animate slideIn">
+                    <a class="dropdown-item" href="services/consultation.html">Consultation</a>
+                    <a class="dropdown-item" href="services/adult-psychotherapy.html">Adult Psychotherapy</a>
+                    <a class="dropdown-item" href="services/child-psychotherapy.html">Child Psychotherapy</a>
+                    <a class="dropdown-item" href="services/couple-therapy.html">Couple Therapy</a>
+                    <a class="dropdown-item" href="services/sport-psychology.html">Sport Psychology</a>
+                    <a class="dropdown-item" href="services/psychiatry.html">Psychiatry</a>
+                </div>
+            </li>
+            <li class="nav-item menu-item">
+                <a class="nav-link" href="fees.html">Fees</a>
+            </li>
+            <li class="nav-item menu-item">
+                <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
+            <li class="nav-item menu-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+        </ul> 
         </div>
-      </li>
-    </ul>
-  </div>
-</nav>
+    </nav>
       
 
       <main class="container-fluid">
