--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav menu">
-            <li class="nav-item dropdown menu-item">
+        <ul class="navbar-nav menu w-100">
+            <li class="nav-item dropdown menu-item ml-auto">
                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Services</a>
                 <div class="dropdown-menu animate slideIn">
                     <a class="dropdown-item" href="services/consultation.html">Form 1</a>
