--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav menu w-100">
             <li class="nav-item dropdown menu-item ml-auto">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Services</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn">
-                    <a class="dropdown-item" href="services/consultation.html">Form 1</a>
-                    <a class="dropdown-item" href="services/adult-psychotherapy.html">Form 2</a>
-                    <a class="dropdown-item" href="services/child-psychotherapy.html">Form 3</a>
+                    <a class="dropdown-item" href="#">Form 1</a>
+                    <a class="dropdown-item" href="#">Form 2</a>
+                    <a class="dropdown-item" href="#">Form 3</a>
                 </div>
            </li>
         </ul> 
