--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <script src="script.js"></script>
       <script src="owlcarousel/owl.carousel.min.js"></script>
       <!-- <link rel="shortcut icon" type="image/png" href="favicon.png"> -->
-      <link rel="shortcut icon" type="image/png" href="favicon.png">
+      <link rel="shortcut icon" type="image/png" href="logo.png">
       <title>Private Psychology Clinic Template</title>
    </head>
 
@@ -27,7 +27,7 @@
     <header>
        
     <nav class="navbar navbar-expand-sm bg-light">
-        <a class="navbar-brand" href="#">Amy Horne, Ph.D</a>
+        <a class="navbar-brand" href="#"><img src="logo.png" alt="logo" class="logo"></a>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
