--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta property="og:title" content="Dr. Amy Horne" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://www.dramyhorne.com" />
-      <meta property="og:image" content="https://majakochanowska.github.io/psych-template/images/og-image.png" />
+      <meta property="og:image" content="https://github.com/dramyhorne/dramyhorne.github.io/blob/master/logo.png" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
       <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
       <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
@@ -19,7 +19,7 @@
       <script src="owlcarousel/owl.carousel.min.js"></script>
       <!-- <link rel="shortcut icon" type="image/png" href="favicon.png"> -->
       <link rel="shortcut icon" type="image/png" href="logo.png">
-      <title>Private Psychology Clinic Template</title>
+      <title>AMY HORNE, Ph.D.</title>
    </head>
 
 
