--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="building.png" alt="Snow" style="width:100%">
             </div>
             <div class="column">
-                <img src="psych.png" alt="Forest" style="width:100%">
+                <img src="profile.png" alt="Forest" style="width:100%">
             </div>
             <div class="column">
                 <img src="office.png" alt="Mountains" style="width:100%">
