--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
           
          <div class="row">
             <div class="column">
-                <img src="building.png" alt="Snow" style="width:100%">
+                <img src="building.jpg" alt="buliding" style="width:100%">
             </div>
             <div class="column">
-                <img src="profile.png" alt="Forest" style="width:100%">
+                <img src="profile.jpg" alt="profile" style="width:100%">
             </div>
             <div class="column">
-                <img src="office.png" alt="Mountains" style="width:100%">
+                <img src="office.jpg" alt="office" style="width:100%">
             </div>
          </div>
          
