--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
       <main class="container-fluid">
           
          <div class="row">
-            <div class="column">
+            <div class=""col-sm-4">
                 <img src="building.jpg" alt="buliding" style="width:100%">
             </div>
-            <div class="column">
+            <div class=""col-sm-4">
                 <img src="profile.jpg" alt="profile" style="width:60%">
             </div>
-            <div class="column">
+            <div class=""col-sm-4">
                 <img src="office.jpg" alt="office" style="width:100%">
             </div>
          </div>
