--- a/index.html
+++ b/index.html
@@ -54,26 +54,12 @@
             <div class="small-col"><img src="profile.jpg" alt="profile" style="width:100%"></div>
             <div class="column"><img src="office.jpg" alt="office" style="width:100%"></div>
          </div>
-           
-         <!--
-         <div class="row">
-            <div class=""col-sm-4">
-                <img src="building.jpg" alt="buliding" style="width:100%">
-            </div>
-            <div class=""col-sm-4">
-                <img src="profile.jpg" alt="profile" style="width:60%">
-            </div>
-            <div class=""col-sm-4">
-                <img src="office.jpg" alt="office" style="width:100%">
-            </div>
-         </div>
 
-               --> 
          
          <div class="row">
             <div class="column">
                <header class="jumbotron text-center">
-                  <h1 class="main-title">Amy Horne, Ph.D</h1>
+                  <h1 class="main-title">Amy Horne, Ph.D.</h1>
                   <h3>Clinical Psychologist</h3>
                   <p>Little paragraph introducing yourself? We can also just delete this little section if you want. </p>
                </header>
