--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
        
     <nav class="navbar navbar-expand-sm bg-light">
-        <h1 class="nav-title" href="#">Amy Horne, Ph.D.</h1>
+        <a class="nav-brand" href="#">Amy Horne, Ph.D.</a>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
