--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
        
     <nav class="navbar navbar-expand-sm bg-light">
-        <a class="navbar-brand" href="#"><img src="logo.png" alt="logo" class="logo"></a>
+        <a class="navbar-brand" href="#">Amy Horne</a>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
