--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
        
     <nav class="navbar navbar-expand-sm bg-light">
-        <span class="navbar-brand mb-0 h1">Amy Horne</span>
+        <span class="navbar-brand font-family:Baskerville">Amy Horne</span>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
