--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
        
     <nav class="navbar navbar-expand-sm bg-light">
-        <p class="navbar-brand" style="font-family:Baskerville color:black font-size:larger">Dr. Amy Horne</p>
+        <text class="navbar-brand">Amy Horne</text>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
