--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
          <div class="row">
             <div class="col">
                <div class="text-left">
-                  <p>&copy; <span id="currentYear"></span>Dr. Amy Horne All Rights Reserved</p>
+                  <p>&copy; <span id="currentYear"></span> Amy Horne, Ph.D. All Rights Reserved</p>
                </div>
             </div>
          </div>
