--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <body>
     <header>
        
-    <nav class="navbar navbar-expand-sm bg-light">
+    <nav class="navbar navbar-expand-sm" style="background-color:#bcd5f7">
         <text class="navbar-brand">Amy Horne, Ph.D.</text>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
