--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <main class="container-fluid">
          
-         <div class="row" style="background-color:#c3cddb">
+         <div class="row" style="background-color:#dde5f0">
             <div class="column"><img src="building.jpg" alt="buliding" style="width:100%"></div>
             <div class="small-col"><img src="profile.jpg" alt="profile" style="width:100%"></div>
             <div class="column"><img src="office.jpg" alt="office" style="width:100%"></div>
