--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      </header>
       
 
-      <main class="container-fluid">
+      <main class="container-fluid" style="background-color:e6effc">
          
          <div class="row" style="background-color:#e6effc">
             <div class="column"><img src="building.jpg" alt="buliding" style="width:100%"></div>
