--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          
          <div class="row" style="background-color:#e6effc">
             <div class="column">
-               <header class="jumbotron text-center" style="padding-top:10px; padding-bottom:10px;">
+               <header class="jumbotron text-center">
                   <h1 class="main-title">Amy Horne, Ph.D.</h1>
                   <h3>Clinical Psychologist</h3>
                   <p>Little paragraph introducing yourself? We can also just delete this little section if you want. </p>
