--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
       <main class="container-fluid">
          
-         <div class="row" style="background-color:#e6effc">
+         <div class="row" style="background-color:#f7faff">
             <div class="column"><img src="building.jpg" alt="buliding" style="width:100%"></div>
             <div class="small-col"><img src="profile.jpg" alt="profile" style="width:100%"></div>
             <div class="column"><img src="office.jpg" alt="office" style="width:100%"></div>
          </div>
 
          
-         <div class="row" style="background-color:#e6effc">
+         <div class="row" style="background-color:#f7faff">
             <div class="column">
                <header class="jumbotron text-center">
                   <h1 class="main-title">Amy Horne, Ph.D.</h1>
