--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
          
          <div class="row" style="background-color:#f7faff">
             <div class="column">
-               <header class="jumbotron text-center" style="border-radius:15px; background-color:#b5b5b5;">
+               <header class="jumbotron text-center" style="border-radius:15px; background-color:#b5b5b5; border-style:solid; border:5px;
+border-color:black;">
                   <h1 class="main-title">Amy Horne, Ph.D.</h1>
                   <h3>Clinical Psychologist</h3>
                   <p>Little paragraph introducing yourself? We can also just delete this little section if you want. </p>
