--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          
          <div class="row" style="background-color:#f7faff">
             <div class="column">
-               <header class="jumbotron text-center" style="border-radius:30px; background-color:#b5b5b5; border-style:solid; border:5px;
+               <header class="jumbotron text-center" style="border-radius:30px; background-color:#f7faff; border-style:solid; border:5px;
 border-color:black;">
                   <h1 class="main-title">Amy Horne, Ph.D.</h1>
                   <h3>Clinical Psychologist</h3>
