--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav menu w-100">
             <li class="nav-item dropdown menu-item ml-auto">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
+                <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn">
                     <a class="dropdown-item" href="#">Form 1</a>
                     <a class="dropdown-item" href="#">Form 2</a>
