--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
        
 
-    <nav class="navbar navbar-expand-sm" style="background-color:#bcd5f7">
+    <nav class="navbar navbar-expand-sm" style="background-color:#dc9c8c">
         <text class="navbar-brand">Amy Horne, Ph.D.</text>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -58,13 +58,21 @@
          </div>
 
          
-         <div class="row" style="background-color:#f7faff">
+         <div class="row" style="background-color:#f4e4e4">
             <div class="column">
-               <header class="jumbotron text-center" style="border-radius:30px; background-color:#f7faff; border-style:solid; border:5px;
+               <header class="jumbotron text-center" style="border-radius:30px; background-color:#f4e4e4; border-style:solid; border:5px;
 border-color:black;">
                   <h1 class="main-title">Amy Horne, Ph.D.</h1>
                   <h3>Clinical Psychologist</h3>
-                  <p>Little paragraph introducing yourself? We can also just delete this little section if you want. </p>
+                  <p></p>
+                  <h3>Psychotherapy and Consultation</h3>
+                  <h3>Clinical Supervision</h3>
+                  <p></p>
+                  <h4>Providing psychological services for:</h4>
+                  <h4>Adolescents, College Students and Adults</h4>
+                  <p></p>
+                  <h4>Psychotherapy Supervision for Clinicians</h4>
+                  <p>CA License PSY8815</p>
                </header>
             </div>
          </div>
