--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 border-color:black;">
                   <h1 class="main-title">Amy Horne, Ph.D.</h1>
                   <h3>Clinical Psychologist</h3>
-                  <p></p>
+                  <h1 class="main-title"></h1>
                   <h3>Psychotherapy and Consultation</h3>
-                  <h3>Clinical Supervision</h3>
+                  <h3 class="section-div">Clinical Supervision</h3>
                   <p></p>
                   <h4>Providing psychological services for:</h4>
                   <h4>Adolescents, College Students and Adults</h4>
