--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ border-color:black;">
                   <p></p>
                   <h4>Providing psychological services for:</h4>
                   <h4>Adolescents, College Students and Adults</h4>
-                  <p></p>
+                  <h3></h3>
                   <h4>Psychotherapy Supervision for Clinicians</h4>
-                  <p>CA License PSY8815</p>
+                  <h6>CA License PSY8815</h6>
                </header>
             </div>
          </div>
