--- a/index.html
+++ b/index.html
@@ -63,15 +63,11 @@
                <header class="jumbotron text-center" style="border-radius:30px; background-color:#f4e4e4; border-style:solid; border:5px;
 border-color:black;">
                   <h1 class="main-title">Amy Horne, Ph.D.</h1>
-                  <h3>Clinical Psychologist</h3>
-                  <h1 class="main-title"></h1>
-                  <h3>Psychotherapy and Consultation</h3>
+                  <h3>Clinical Psychologist <br> <br>Psychotherapy and Consultation</h3>
                   <h3 class="section-div">Clinical Supervision</h3>
                   <p></p>
                   <h4>Providing psychological services for:</h4>
-                  <h4>Adolescents, College Students and Adults</h4>
-                  <h3></h3>
-                  <h4>Psychotherapy Supervision for Clinicians</h4>
+                  <h4>Adolescents, College Students and Adults <br> Psychotherapy Supervision for Clinicians</h4>
                   <h6>CA License PSY8815</h6>
                </header>
             </div>
