--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
                <header class="jumbotron text-center" style="border-radius:30px; background-color:#f4e4e4; border-style:solid; border:5px;
 border-color:black;">
                   <h1 class="main-title">Amy Horne, Ph.D.</h1>
-                  <h3>Clinical Psychologist<br><br><br>Psychotherapy and Consultation</h3>
-                  <h3 class="section-div">Clinical Supervision</h3>
-                  <p></p>
-                  <h4>Providing psychological services for:<br>Adolescents, College Students and Adults</h4>
+                  <h3>Clinical Psychologist<br><br><br>Psychotherapy and Consultation<br>Clinical Supervision</h3>
+                  <hr style="width:50%">
+                  <h4>Providing psychological services for:<br><br>Adolescents, College Students and Adults</h4>
                   <h4>Psychotherapy Supervision for Clinicians</h4>
                   <h5>CA License PSY8815</h5>
                </header>
