--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 border-color:black;">
                   <h1 class="main-title">Amy Horne, Ph.D.</h1>
                   <h3>Clinical Psychologist<br><br><br>Psychotherapy and Consultation<br>Clinical Supervision</h3>
-                  <hr style="width:50%">
+                  <hr style="width:75%; border-color:#000000">
                   <h4>Providing psychological services for:<br><br>Adolescents, College Students and Adults</h4>
                   <h4>Psychotherapy Supervision for Clinicians</h4>
                   <h5>CA License PSY8815</h5>
