--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ border-color:black;">
          <section>
             <div class="row">
                <div class="col">
-                  <h2 class="section-title">Contact</h2>
+                  <h1>Hours by appointment, please call (858) 350-8788<br>Telehealth available</h1>
                </div>
             </div>
             <div class="row">
