--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ border-color:black;">
          
          <section>
             <div class="row">
-               <div class="col">
+               <div class="column">
                   <h1>Hours by appointment, please call (858) 350-8788<br>Telehealth available</h1>
                </div>
             </div>
