--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ border-color:black;">
          <section>
             <div class="row">
                <div class="column text-center">
-                  <h1>Hours by appointment, please call (858) 350-8788<br>Telehealth available</h1>
+                  <h3><br>Hours by appointment, please call (858) 350-8788<br>Telehealth available</h3>
                </div>
             </div>
             <div class="row">
