--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ border-color:black;">
             
             <div class="row">
                <div class="column">
-                           
+                  <img src="gmap.png" alt="gmap" style="width:100%">       
                </div>
                <div class="column">
                   <address class="text-center">
