--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ border-color:black;">
          
          <section>
             <div class="row">
-               <div class="column text-center" style="vertical-align: middle;">
+               <div class="column text-center" style="display:flex; align-items:center; justify-content:center;">
                   <h2><br>Hours by appointment, please call (858) 350-8788<br>Telehealth available</h2>
                </div>
             </div>
