--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ border-color:black;">
                   <img src="gmap.png" alt="gmap" style="width:100%">       
                </div>
                <div class="column">
-                  <address class="text-center v-center">
+                  <address class="text-center vcenter">
                      <h3>Office Address:<br><a href="https://www.google.com/maps/place/125+N+Acacia+Ave+%23113,+Solana+Beach,+CA+92075/@32.9925,-117.2750589,17z/data=!3m1!4b1!4m5!3m4!1s0x80dc0ecddd4e5043:0xf3745e49ed25740d!8m2!3d32.9924955!4d-117.2728702" target="_blank">125 N. Acacia Ave., Suite 113<br>Solana Beach, CA 92075</a></h3>
                   </address>
                </div>     
