--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       <main class="container-fluid">
          
          <div class="row" style="background-color:#f7faff">
-            <div class="column"><img src="building.jpg" alt="buliding" style="width:100%"></div>
+            <div class="column"><img src="building.jpg" alt="buliding" style="width:100%" class="vcenter"></div>
             <div class="small-col"><img src="profile.jpg" alt="profile" style="width:100%"></div>
-            <div class="column"><img src="office.jpg" alt="office" style="width:100%"></div>
+            <div class="column"><img src="office.jpg" alt="office" style="width:100%" class="vcenter"></div>
          </div>
 
          
