--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          
          <div class="row" style="background-color:#f7faff">
             <div class="column"><img src="building.jpg" alt="buliding" style="width:100%" class="vcenter"></div>
-            <div class="small-col"><img src="profile.jpg" alt="profile" style="width:100%"></div>
+            <div class="small-col"><img src="profile.jpg" alt="profile" style="width:100%" class="vcenter"></div>
             <div class="column"><img src="office.jpg" alt="office" style="width:100%" class="vcenter"></div>
          </div>
 
@@ -84,8 +84,8 @@ border-color:black;">
                </div>
                <div class="column">
                   <address class="text-center vcenter">
-                     <h3>Office Address:<br><a href="https://www.google.com/maps/place/125+N+Acacia+Ave+%23113,+Solana+Beach,+CA+92075/@32.9925,-117.2750589,17z/data=!3m1!4b1!4m5!3m4!1s0x80dc0ecddd4e5043:0xf3745e49ed25740d!8m2!3d32.9924955!4d-117.2728702" target="_blank">125 N. Acacia Ave., Suite 113<br>Solana Beach, CA 92075</a></h3>
-                     <h3><i class="fas fa-at"></i> <a href="mailto:dramyhorne@gmail.com">dramyhorne@gmail.com</a></h3> 
+                     <h4>Office Address:<br><a href="https://www.google.com/maps/place/125+N+Acacia+Ave+%23113,+Solana+Beach,+CA+92075/@32.9925,-117.2750589,17z/data=!3m1!4b1!4m5!3m4!1s0x80dc0ecddd4e5043:0xf3745e49ed25740d!8m2!3d32.9924955!4d-117.2728702" target="_blank">125 N. Acacia Ave., Suite 113<br>Solana Beach, CA 92075</a></h4>
+                     <h4><a href="mailto:dramyhorne@gmail.com">dramyhorne@gmail.com</a></h4> 
                   </address>
                </div>     
             </div>
