--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
       <main class="container-fluid">
          
-         <div class="row" style="background-color:#f7faff">
+         <div class="row" style="background-color:#fffcfc">
             <div class="column"><img src="building.jpg" alt="buliding" style="width:100%" class="vcenter"></div>
             <div class="small-col"><img src="profile.jpg" alt="profile" style="width:100%" class="vcenter"></div>
             <div class="column"><img src="office.jpg" alt="office" style="width:100%" class="vcenter"></div>
          </div>
 
          
-         <div class="row" style="background-color:#f4e4e4">
+         <div class="row" style="background-color:#fffcfc">
             <div class="column">
                <header class="jumbotron text-center" style="border-radius:30px; background-color:#f4e4e4; border-style:solid; border:5px;
 border-color:black;">
