--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@ border-color:black;">
          </div>
          
          <section>
-            <div class="row">
+            <div class="row" style="background-color:#fffcfc">
                <div class="column text-center">
                   <h2><br>Hours by appointment, please call (858) 350-8788<br>Telehealth available<br></h2>
                </div>
             </div>
             
-            <div class="row">
+            <div class="row" style="background-color:#fffcfc">
                <div class="column">
                   <img src="gmap.png" alt="gmap" style="width:100%">       
                </div>
