--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ border-color:black;">
          <section>
             <div class="row" style="background-color:#fffcfc">
                <div class="column text-center">
-                  <h2><br>Hours by appointment, please call (858) 350-8788<br>Telehealth available<br></h2>
+                  <h2><br>Hours by appointment, please call (858) 350-8788<br>Telehealth available<br><br></h2>
                </div>
             </div>
             
