--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="nav-item dropdown menu-item ml-auto">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn">
-                    <a class="dropdown-item" href="#">Form 1</a>
+                    <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf">Patient Intake Information Form</a>
                     <a class="dropdown-item" href="#">Form 2</a>
                     <a class="dropdown-item" href="#">Form 3</a>
                 </div>
