--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav menu w-100">
-            <li class="nav-item dropdown menu-item ml-auto">
+            <li class="nav-item dropdown menu-item ml-auto pull-left">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf">Patient Intake Information Form</a>
