--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse pull-left" id="collapsibleNavbar">
         <ul class="navbar-nav menu w-100">
             <li class="nav-item dropdown menu-item ml-auto pull-left">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf">Patient Intake Information Form</a>
-                    <a class="dropdown-item" href="#">Form 2</a>
+                    <a class="dropdown-item" href="forms/Psychological_Services_Contract.pdf">Psychological Services Contract</a>
                     <a class="dropdown-item" href="#">Form 3</a>
                 </div>
            </li>
