--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse pull-left" id="collapsibleNavbar">
-        <ul class="navbar-nav menu w-100">
+        <ul class="navbar-nav menu w-100 pull-left">
             <li class="nav-item dropdown menu-item ml-auto pull-left">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
-                <div class="dropdown-menu animate slideIn">
+                <div class="dropdown-menu animate slideIn pull-left">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf">Patient Intake Information Form</a>
                     <a class="dropdown-item" href="forms/Psychological_Services_Contract.pdf">Psychological Services Contract</a>
-                    <a class="dropdown-item" href="#">Form 3</a>
+                    <a class="dropdown-item" href="forms/Teletherapy_Consent_Form.pdf">Teletherapy Consent Form</a>
                 </div>
            </li>
         </ul> 
