--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
-        <div class="collapse navbar-collapse pull-left" id="collapsibleNavbar">
-        <ul class="navbar-nav menu w-100 pull-left">
-            <li class="nav-item dropdown menu-item ml-auto pull-left">
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav menu">
+            <li class="nav-item dropdown menu-item ml-auto">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
-                <div class="dropdown-menu animate slideIn pull-left">
+                <div class="dropdown-menu animate slideIn">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf">Patient Intake Information Form</a>
                     <a class="dropdown-item" href="forms/Psychological_Services_Contract.pdf">Psychological Services Contract</a>
                     <a class="dropdown-item" href="forms/Teletherapy_Consent_Form.pdf">Teletherapy Consent Form</a>
+                   <a class="dropdown-item" href="forms/HIPAA_Notice_of_Privacy_Practices.pdf">HIPAA Notice of Privacy Practices</a>
                 </div>
            </li>
         </ul> 
