--- a/index.html
+++ b/index.html
@@ -34,13 +34,20 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav menu">
+           <li class="nav-item menu-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+           <li class="nav-item menu-item">
+                <a class="nav-link" href="index.html">About Me</a>
+            </li>
+           
             <li class="nav-item dropdown menu-item ml-auto">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn">
-                    <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf">Patient Intake Information Form</a>
-                    <a class="dropdown-item" href="forms/Psychological_Services_Contract.pdf">Psychological Services Contract</a>
-                    <a class="dropdown-item" href="forms/Teletherapy_Consent_Form.pdf">Teletherapy Consent Form</a>
-                   <a class="dropdown-item" href="forms/HIPAA_Notice_of_Privacy_Practices.pdf">HIPAA Notice of Privacy Practices</a>
+                    <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf" target="_blank">Patient Intake Information Form</a>
+                    <a class="dropdown-item" href="forms/Psychological_Services_Contract.pdf" target="_blank">Psychological Services Contract</a>
+                    <a class="dropdown-item" href="forms/Teletherapy_Consent_Form.pdf" target="_blank">Teletherapy Consent Form</a>
+                   <a class="dropdown-item" href="forms/HIPAA_Notice_of_Privacy_Practices.pdf" target="_blank">HIPAA Notice of Privacy Practices</a>
                 </div>
            </li>
         </ul> 
