--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav menu w-75">
-           <li class="nav-item menu-item">
+           <li class="nav-item menu-item ml-auto">
                 <a class="nav-link" style="color:black;" href="index.html">Home</a>
             </li>
-           <li class="nav-item menu-item">
+           <li class="nav-item menu-item ml-auto">
                 <a class="nav-link" style="color:black;" href="index.html">About Me</a>
             </li>
             <li class="nav-item dropdown menu-item ml-auto">
