--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav menu w-75">
+        <ul class="nav navbar-nav navbar-right menu">
            <li class="nav-item menu-item ml-auto">
                 <a class="nav-link" style="color:black;" href="index.html">Home</a>
             </li>
