--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" style="color:black;" href="index.html">About Me</a>
             </li>
             <li class="dropdown">
-                <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms<span class = "caret"></span></a>
+                <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn pull-left">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf" target="_blank">Patient Intake Information Form</a>
                     <a class="dropdown-item" href="forms/Psychological_Service_Contract.pdf" target="_blank">Psychological Services Contract</a>
