--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
        
 
-    <nav class="navbar navbar-expand-sm" style="background-color:#dc9c8c">
+       <nav class="navbar navbar-expand-sm" style="background-color:#dc9c8c">
         <text class="navbar-brand">Amy Horne, Ph.D.</text>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -40,8 +40,8 @@
            <li class="nav-item menu-item ml-auto">
                 <a class="nav-link" style="color:black;" href="index.html">About Me</a>
             </li>
-            <li class="dropdown">
-                <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
+            <li class="nav-item dropdown menu-item ml-auto">
+                <a class="nav-link dropdown-toggle pull-left" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn pull-left">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf" target="_blank">Patient Intake Information Form</a>
                     <a class="dropdown-item" href="forms/Psychological_Service_Contract.pdf" target="_blank">Psychological Services Contract</a>
