--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <a class="nav-link" style="color:black;" href="index.html">About Me</a>
             </li>
             <li class="nav-item dropdown menu-item ml-auto">
-                <a class="nav-link dropdown-toggle pull-left" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
-                <div class="dropdown-menu animate slideIn pull-left">
+                <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
+                <div class="dropdown-menu animate slideIn">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf" target="_blank">Patient Intake Information Form</a>
                     <a class="dropdown-item" href="forms/Psychological_Service_Contract.pdf" target="_blank">Psychological Services Contract</a>
                     <a class="dropdown-item" href="forms/Teletherapy_Consent_Form.pdf" target="_blank">Teletherapy Consent Form</a>
