--- a/index.html
+++ b/index.html
@@ -33,14 +33,8 @@
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="nav navbar-nav navbar-right menu">
-           <li class="nav-item menu-item ml-auto">
-                <a class="nav-link" style="color:black;" href="index.html">Home</a>
-            </li>
-           <li class="nav-item menu-item ml-auto">
-                <a class="nav-link" style="color:black;" href="index.html">About Me</a>
-            </li>
-            <li class="nav-item dropdown menu-item ml-auto">
+        <ul class="nav navbar-nav navbar-right menu w-100">
+           <li class="nav-item dropdown menu-item ml-auto">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu animate slideIn">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf" target="_blank">Patient Intake Information Form</a>
@@ -50,6 +44,13 @@
                    <a class="dropdown-item" href="forms/Release_of_Information_Form.pdf" target="_blank">Release of Information Form</a>
                 </div>
            </li>
+           <li class="nav-item menu-item ml-auto">
+                <a class="nav-link" style="color:black;" href="index.html">Home</a>
+           </li>
+           <li class="nav-item menu-item ml-auto">
+                <a class="nav-link" style="color:black;" href="index.html">About Me</a>
+           </li>
+            
         </ul> 
         </div>
     </nav>
