--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a class="nav-link" style="color:black;" href="index.html">Home</a>
            </li>
            <li class="nav-item menu-item ml-auto">
-                <a class="nav-link" style="color:black;" href="index.html">About Me</a>
+                <a class="nav-link" style="color:black;" href="aboutme.html">About Me</a>
            </li>
             
         </ul> 
