--- a/aboutme.html
+++ b/aboutme.html
@@ -65,7 +65,7 @@
          <section>
             <div class="row" style="background-color:#fffcfc">
                <div class="column text-center">
-                  <h2>About me section coming soon!</h2>
+                  <h2><br>About me section coming soon!</h2>
                </div>
             </div>
          </section>
