--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul class="nav navbar-nav navbar-right menu w-50">
            <li class="nav-item dropdown menu-item ml-auto">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
-                <div class="dropdown-menu animate slideIn">
+                <div class="dropdown-menu dropdown-menu-right animate slideIn">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf" target="_blank">Patient Intake Information Form</a>
                     <a class="dropdown-item" href="forms/Psychological_Service_Contract.pdf" target="_blank">Psychological Services Contract</a>
                     <a class="dropdown-item" href="forms/Teletherapy_Consent_Form.pdf" target="_blank">Teletherapy Consent Form</a>
