--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="nav navbar-nav navbar-right menu">
-           <li class="nav-item menu-item ml-auto">
+           <li class="nav-item menu-item mr-auto">
                 <a class="nav-link" style="color:black;" href="index.html">Home</a>
            </li>
-           <li class="nav-item menu-item ml-auto">
+           <li class="nav-item menu-item mr-auto">
                 <a class="nav-link" style="color:black;" href="aboutme.html">About Me</a>
            </li>
-           <li class="nav-item dropdown menu-item ml-auto">
+           <li class="nav-item dropdown menu-item mr-auto">
                 <a class="nav-link dropdown-toggle" style="color:black;" href="#" id="navbardrop" data-toggle="dropdown">Forms</a>
                 <div class="dropdown-menu dropdown-menu-right animate slideIn">
                     <a class="dropdown-item" href="forms/Patient_Intake_Information_Form.pdf" target="_blank">Patient Intake Information Form</a>
