--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
        
 
-       <nav class="navbar navbar-expand-sm" style="background-color:#dc9c8c">
+       <nav class="navbar navbar-expand-sm justify-content-end" style="background-color:#dc9c8c">
         <text class="navbar-brand">Amy Horne, Ph.D.</text>
         <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
