--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
        <nav class="navbar navbar-expand-sm justify-content-end" style="background-color:#dc9c8c">
         <text class="navbar-brand">Amy Horne, Ph.D.</text>
-        <button aria-label="toggle menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <button aria-label="toggle menu" class="navbar-toggler ml-auto mr-1" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
